--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,86 +1,115 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<?xml version="1.0" encoding="utf-8"?>
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:background="#d4304ffe"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-     android:layout_height="match_parent"
-        android:paddingLeft="@dimen/padding_large"
-        android:paddingRight="@dimen/padding_large"
-        android:paddingTop="@dimen/padding_large"
-        android:paddingBottom="@dimen/padding_large"
-        android:background="#2c1f1a"
-       tools:context=".MainActivity">
+    android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    tools:context="com.sdmd.mgava.mypetsapp.MainActivity"
+    >
 
-    <RelativeLayout
-        android:id="@+id/lytTitlebar"
-        android:layout_width="fill_parent"
-        android:layout_height="45dp"
-        android:background="@drawable/titlebar_background"
-        android:layout_alignParentTop="true">
-        <TextView
-            android:id="@+id/txtTitle"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="18sp"
-            android:textStyle="bold"
-            android:textColor="@color/text"
-            android:text="My Pet App"
-            android:shadowColor="@color/shadow"
-            android:shadowDx="0.5"
-            android:shadowDy="0.5"
-            android:shadowRadius="0.5"
-            android:layout_marginLeft="10dp"
-            android:layout_centerVertical="true"
-            tools:ignore="RtlHardcoded" />
 
-        <ImageButton
-            android:id="@+id/imgSetting"
-            android:layout_width="wrap_content"
-            android:layout_height="45dp"
-            android:paddingLeft="5dp"
-            android:paddingRight="5dp"
-            android:src="@drawable/setting"
-            android:background="@drawable/button_top_style_2"
-            android:layout_alignParentRight="true"
-            android:layout_centerVertical="true"
-            tools:ignore="ContentDescription,RtlHardcoded" />
-    </RelativeLayout>
 
-    <LinearLayout
-        android:id="@+id/lytContent"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:layout_below="@+id/lytTitlebar"
-        >
-        <ImageView
-            android:id="@+id/imgCover"
-            android:layout_width="wrap_content"
-            android:layout_height="150dp"
-            android:src="@drawable/cover_image"
-            android:scaleType="centerCrop"
-            tools:ignore="ContentDescription" />
+    <ListView
+        android:id="@+id/Species"
+        android:layout_width="368dp"
+        android:layout_height="495dp"
 
-        <TextView
-            android:id="@+id/txtCaption"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:background="@color/caption"
-            android:textColor="@color/text"
-            android:textStyle="bold"
-            android:textSize="14sp"
-            android:text="@string/main_menu"
-            android:paddingLeft="10dp"
-            android:paddingTop="3dp"
-            android:paddingBottom="3dp"
-            tools:ignore="RtlHardcoded,RtlSymmetry" />
-        <ListView
-            android:id="@+id/listMainMenu"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:fadeScrollbars="true"
-            android:divider="@color/background"
-            android:dividerHeight="1dip"/>
-    </LinearLayout>
-</RelativeLayout>
+        android:dividerHeight="30.0sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="1.0"
+
+
+        />
+
+
+</android.support.constraint.ConstraintLayout>
+<!--<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
+    <!--xmlns:tools="http://schemas.android.com/tools"-->
+    <!--android:layout_width="match_parent"-->
+     <!--android:layout_height="match_parent"-->
+        <!--android:paddingLeft="@dimen/padding_large"-->
+        <!--android:paddingRight="@dimen/padding_large"-->
+        <!--android:paddingTop="@dimen/padding_large"-->
+        <!--android:paddingBottom="@dimen/padding_large"-->
+        <!--android:background="#2c1f1a"-->
+       <!--tools:context=".MainActivity">-->
+
+    <!--<RelativeLayout-->
+        <!--android:id="@+id/lytTitlebar"-->
+        <!--android:layout_width="fill_parent"-->
+        <!--android:layout_height="45dp"-->
+        <!--android:background="@drawable/titlebar_background"-->
+        <!--android:layout_alignParentTop="true">-->
+        <!--<TextView-->
+            <!--android:id="@+id/txtTitle"-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:textSize="18sp"-->
+            <!--android:textStyle="bold"-->
+            <!--android:textColor="@color/text"-->
+            <!--android:text="My Pet App"-->
+            <!--android:shadowColor="@color/shadow"-->
+            <!--android:shadowDx="0.5"-->
+            <!--android:shadowDy="0.5"-->
+            <!--android:shadowRadius="0.5"-->
+            <!--android:layout_marginLeft="10dp"-->
+            <!--android:layout_centerVertical="true"-->
+            <!--tools:ignore="RtlHardcoded" />-->
+
+        <!--<ImageButton-->
+            <!--android:id="@+id/imgSetting"-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="45dp"-->
+            <!--android:paddingLeft="5dp"-->
+            <!--android:paddingRight="5dp"-->
+            <!--android:src="@drawable/setting"-->
+            <!--android:background="@drawable/button_top_style_2"-->
+            <!--android:layout_alignParentRight="true"-->
+            <!--android:layout_centerVertical="true"-->
+            <!--tools:ignore="ContentDescription,RtlHardcoded" />-->
+    <!--</RelativeLayout>-->
+
+    <!--<LinearLayout-->
+        <!--android:id="@+id/lytContent"-->
+        <!--android:layout_width="fill_parent"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:orientation="vertical"-->
+        <!--android:layout_below="@+id/lytTitlebar"-->
+        <!--&gt;-->
+        <!--<ImageView-->
+            <!--android:id="@+id/imgCover"-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="150dp"-->
+            <!--android:src="@drawable/cover_image"-->
+            <!--android:scaleType="centerCrop"-->
+            <!--tools:ignore="ContentDescription" />-->
+
+        <!--<TextView-->
+            <!--android:id="@+id/txtCaption"-->
+            <!--android:layout_width="fill_parent"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:background="@color/caption"-->
+            <!--android:textColor="@color/text"-->
+            <!--android:textStyle="bold"-->
+            <!--android:textSize="14sp"-->
+            <!--android:text="@string/main_menu"-->
+            <!--android:paddingLeft="10dp"-->
+            <!--android:paddingTop="3dp"-->
+            <!--android:paddingBottom="3dp"-->
+            <!--tools:ignore="RtlHardcoded,RtlSymmetry" />-->
+        <!--<ListView-->
+            <!--android:id="@+id/listMainMenu"-->
+            <!--android:layout_width="fill_parent"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:fadeScrollbars="true"-->
+            <!--android:divider="@color/background"-->
+            <!--android:dividerHeight="1dip"/>-->
+    <!--</LinearLayout>-->
+<!--</RelativeLayout>-->
 
 
     <!--<?xml version="1.0" encoding="utf-8"?>-->
