--- a/app/src/main/res/layout/activity_user.xml
+++ b/app/src/main/res/layout/activity_user.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:background="#031474"
     android:layout_width="fill_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="fill_parent"
     android:scrollbars="vertical"
     android:fillViewport="true"
     android:orientation="vertical"
@@ -11,21 +13,21 @@
             <TextView
                 android:layout_marginTop="50dp"
                 android:id="@+id/greeting_text_view"
-                android:textColor="#000000"
+                android:textColor="#cec000"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textSize="40dp"
                 android:text="Hello, User"
                 android:textStyle="bold"
-                 />
-            <Button
-                android:layout_marginTop="50dp"
-                android:id="@+id/logout_button"
-                android:textColor="#000000"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Sign Out!!"
-                android:textStyle="bold"
-                />
+                tools:ignore="SpUsage" />
+
+    <Button
+        android:id="@+id/logout_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="50dp"
+        android:text="Sign Out!!"
+        android:textColor="#000000"
+        android:textStyle="bold" />
 </LinearLayout>
 
