--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -1,12 +1,15 @@
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:id="@+id/menu_settings"
-        android:title="@string/menu_settings"
-        android:orderInCategory="100" />
-    <item android:id="@+id/menu_login"
-        android:title="Log in" />
+<?xml version="1.0" encoding="utf-8"?>
+<menu xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <item android:id="@+id/menu_logout"
-        android:title="Log out" />
+    <item
+        android:id="@+id/idLogin"
+        android:title="Login"
+        android:visible="true" />
+    <item
+        android:id="@+id/idLogout"
+        android:title="Logout"
+        android:visible="true"/>
 
 </menu>
 
