--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,4 +11,8 @@
     <color name="image_background">#999999</color>
     <color name="background_actionbar">#bb340e</color>
     <color name="detail_background">#372721</color>
+    <color name="colorPrimary">#3F51B5</color>
+    <color name="colorPrimaryDark">#303F9F</color>
+    <color name="colorAccent">#FF4081</color>
+    <color name="silver">#C0C0C0</color>
 </resources>
